# dspy

./: .env.sample  .envrc  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  ARCHITECTURE_REPORT.md  ARM64_LAMBDA_DEPLOYMENT_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  LLM.md  Makefile  NEW_PR_COMMENT.md  NOTES.local  PR-DRAFT.md  PR.md  PR_COMMENT.md  README.md  SECURITY.md  TODO.md  assert_example.py  assert_gsm8k.py  assert_hotpotqa.py  assertions.md  banking77_tutorial.py  batch_test.py  benchmark.py  bird_evaluation.ipynb  build_lambda_layer.sh  chat_adapter_v2.ipynb  chat_adapter_v3.ipynb  chat_adapter_v4.ipynb  chat_adapter_v5.ipynb  cheatsheet.md  clarifai_llm_retriever_example.ipynb  comparison_example.py  compiler.ipynb  default.nix  (+49 more)
.codeboarding/: Data Management.md  Evaluation and Performance Monitoring.md  Knowledge Integration.md  LM Interaction Management.md  Module Composition and Execution.md  Prediction Strategies.md  Prompt Optimization and Teleprompting.md  on_boarding.md
.devcontainer/: devcontainer.json  interpreter_warning.py  post_create.sh
.github/: dependabot.yml  pull_request_template.md
.github/.internal_dspyai/: pyproject.toml
.github/.internal_dspyai/internals/: build-and-release.md  release-checklist.md
.history/: pyproject_20240626150504.toml  pyproject_20240626151111.toml  pyproject_20240627132601.toml  requirements_20240627125947.txt  setup_20240626145957.py  setup_20240626150117.py  setup_20240626150701.py
benchmarks/: README.md
building-blocks/: 1-language_models.md  1-signatures.md  2-modules.md  3-language_models.md  3-modules.md  6-optimizers.md  solving_your_task.md
cache_loader/: cache_loader.py
community/: companies-using-dspy.md
components-in-dspy/: _category_.json
data/: .gitignore  multihop_800_unlabeled_questions.json
deep-dive/: _category_.json
demos/: Multi-hop QA Program 2 - Retrieve then Read.ipynb  Multi-hop QA Program 5 - Multi-hop Condensed Retrieval with Automatic Demos and Query Fusion.ipynb
docs/: .gitignore  DOCS_README.md  Observability.md  Pipfile  README  README.md  README.rst  assertions.md  cheatsheet.md  conf.py  custom.css  deferred-topics.md  docs_requirements.txt  docusaurus.config.ts  faqs.md  index.md  index.rst  installation.mdx  intro.md  language_models_client.md  language_models_client.rst  lm-evolution-plan.md  mkdocs-dev.yml  mkdocs.yml  modules.md  modules.rst  package-lock.json  package.json  predict-ergonomics-on-pr9313.md  predict_ergonomics_demo.ipynb  predict_ergonomics_demo.py  requirements.in  requirements.txt  retrieval_models_client.md  retrieval_models_client.rst  teleprompters.md  teleprompters.rst  using_local_models.md  using_local_models.rst  vercel.json
docs-page/: package.json
dr-dspy/: .env.example  README.md  TESTING.md  pyproject.toml
dr-dspy/docs/: Plan 1 - HumanEval DSPy BoostrapFewShot Optim 2026.06.25.md
dr-dspy/scripts/: humaneval_dspy_harness-bootstrap-v0.py  humaneval_dspy_harness_bootstrap_v0.py
dr-dspy/scripts/mocks/: humaneval_dspy_harness_bootstrap_v0_mock.py
dr-dspy/src/dr_dspy/: __init__.py  code_eval.py  dspy_event_log.py  dspy_programs.py  event_log.py  flow.py  lm_logging.py  openrouter_lm.py  run_metadata.py  runtime.py  serialization.py
dr-dspy/tests/: conftest.py  test_code_eval.py  test_dspy_programs.py  test_event_log.py  test_humaneval_harness.py  test_lm_logging.py  test_openrouter_lm.py  test_run_metadata.py  test_runtime.py  test_serialization.py
dsp/: __init__.py
dsp_v1_demos/: Multi-hop QA Program 1 - Direct Query.ipynb  Multi-hop QA Program 2 - Retrieve then Read.ipynb  Multi-hop QA Program 3 - Retrieve then Read with Self-Consistency.ipynb  Multi-hop QA Program 4 - Multi-hop Retrieval.ipynb  compiler.ipynb  intro.ipynb
dspy/: __init__.py  __metadata__.py  _litellm.py  _numpy.py  dspy_default_config.json  lm.py  ruff_autofix_smoke.py
dspy-docs/: docusaurus.config.ts
dspy_minimal/: README.md  SUMMARY.md  pyproject.toml
dspy_minimal/dspy_minimal/: __init__.py
dspy_minimal/dspy_minimal/adapters/: __init__.py  base.py  chat_adapter.py  json_adapter.py  utils.py
dspy_minimal/dspy_minimal/adapters/types/: __init__.py  history.py  tool.py
dspy_minimal/dspy_minimal/clients/: __init__.py  base_lm.py  lm.py
dspy_minimal/dspy_minimal/evaluate/: __init__.py  evaluate.py
dspy_minimal/dspy_minimal/mcp/: __init__.py
dspy_minimal/dspy_minimal/predict/: __init__.py  predict.py  react.py
dspy_minimal/dspy_minimal/primitives/: __init__.py  example.py  module.py  prediction.py
dspy_minimal/dspy_minimal/signatures/: __init__.py  field.py  signature.py
dspy_minimal/dspy_minimal/teleprompt/: __init__.py  bootstrap.py
dspy_minimal/dspy_minimal/utils/: __init__.py  exceptions.py  inspect_history.py  settings.py  usage_tracker.py
examples/: README.md  README_mcp.md  __init__.py  app.py  apple_on_device_lm.py  claude_code_example.py  demo_minions.py  dlcot_example.py  dlcot_full_example.py  functional.py  generation.py  intro.ipynb  intro_with_mlc.ipynb  knn.ipynb  langchain_example.py  mcp_function_list.py  mcp_multi_server_example.py  migration.ipynb  pyserini.ipynb  retriever_migration.ipynb  rm_migration.ipynb  servers_config.json  signature_opt2.ipynb  skycamp2023.ipynb  temp.py
flex-viewer/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
guides/: language_models.ipynb
inspect-app/: README.md  app.py
internals/: release-checklist.md
interpreter/: .gitignore  interpreter_adapter.py  laundry_list_dspy.py  laundry_list_test.py  main.ipynb  main_browsecomp.ipynb
mcp_docs/: basic_mcp_integration.py  combined_tools_agent.py  direct_tool_call.py  mcp_docs.md  mcp_fastapi_server.py  robust_mcp_agent.py  standard_dspy_tools.py
private_docs/: sync_to_public.sh  workflow.md
quick-start/: minimal-example.mdx
scratch/: learning_bullets.md  overall-structure.md  preflight.md  speedrun.md
script_tmp/: custom_streaming.py
scripts/: README_swebench.md  benchmark_swebench.py  debug_prediction.py  swebench_adapter.py  (+2 more)
(+12066 files in other folders)
