[project]  
#replace_package_name_marker
name="dspy-ai"  
#replace_package_version_marker
version="3.2.1"  
description = "DSPy"  
readme = {text = "`dspy-ai` is a compatibility alias for the [dspy](https://pypi.org/project/dspy/) package. Install `dspy` instead: `pip install dspy`.", content-type = "text/markdown"}  
authors = [  
    { name = "Omar Khattab", email = "okhattab@stanford.edu" }  
]  
license = { text = "MIT License" }  
requires-python = ">=3.9" 
#replace_dspy_version_marker 
dependencies = ["dspy>=3.2.1"]  
urls = { "Homepage" = "https://github.com/stanfordnlp/dsp" }  
  
[build-system]  
requires = ["setuptools>=40.8.0", "wheel"]  
build-backend = "setuptools.build_meta"  
  
[tool.setuptools.packages.find]  
include = ["dsp.*", "dspy.*", "dsp", "dspy"] 
